--- a/src/App.css
+++ b/src/App.css
@@ -198,3 +198,26 @@ h3 {
   top: 40%;
   right: -6%;
 }
+
+@media screen and (max-width: 650px) {
+  .body {
+    flex-direction: column;
+    padding: 30px 60px;
+  }
+  .body-left {
+    width: 100%;
+  }
+  .body-right {
+    width: 100%;
+  }
+  .left-bottom {
+    flex-direction: column;
+  }
+  .plus-minus-icons {
+    width: 100%;
+  }
+  .add-to-cart {
+    width: 100%;
+    margin-top: 20px;
+  }
+}
