--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -120,7 +120,7 @@ nav > div img:last-of-type:hover {
 }
 .menu {
   display: none;
-  margin: 0px 50px 0px 20px;
+  margin: 0px 20px 0px 20px;
   height: 20px;
   width: 20px;
 }
@@ -163,5 +163,8 @@ nav > div img:last-of-type:hover {
   .cart__product > .flex__container {
     width: 100%;
     justify-content: space-between;
+  }
+  nav > div {
+    margin-right: 20px;
   }
 }
