--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -120,7 +120,7 @@ nav > div img:last-of-type:hover {
 }
 .menu {
   display: none;
-  margin: 0px 20px 0px 20px;
+  margin: 0px 30px 0px 20px;
   height: 20px;
   width: 20px;
 }
@@ -166,5 +166,8 @@ nav > div img:last-of-type:hover {
   }
   nav > div {
     margin-right: 20px;
+  }
+  nav > div img:last-of-type {
+    margin-left: 20px;
   }
 }
